crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__parsed_do_last_binding.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "crate :: render_plain(& report, & source, \"Main.nash\")"
---
  × A do block must end with an expression.
   ╭─[Main.nash:2:5]
 1 │ value = do
 2 │     x <- action
   ·     ─
   ╰────
  help: Add a final expression after this binding.
