crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__parsed_lambda_missing_body.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = \\x ->"
---
nash::syntax

  × Expected an expression in an anonymous function.
   ╭─[src/Main.nash:1:14]
 1 │ value = \x ->
   ·              ─
   ╰────
  help: Add an expression or `todo` for an unfinished body.
