crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__parsed_let_missing_in.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: value = let x = 1
---
nash::syntax

  × Expected `in` after the let definitions.
   ╭─[src/Main.nash:1:18]
 1 │ value = let x = 1
   ·                  ─
   ╰────
  help: Add `in` before the expression that uses these definitions.
