crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__parsed_list_trailing_comma.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "crate :: render_plain(& report, & source, \"Main.nash\")"
---
nash::syntax

  × Expected an expression before the closing delimiter.
   ╭─[Main.nash:1:13]
 1 │ value = [1, ]
   ·             ─
   ╰────
  help: Add the missing expression, or remove a trailing comma.
