crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__parsed_macro_close.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: value = foo!(1
---
nash::syntax::unclosed_delimiter

  × Expected `)` to close `(`.
   ╭─[src/Main.nash:1:15]
 1 │ value = foo!(1
   ·             ┬ ┬
   ·             │ ╰── expected `)`
   ·             ╰── opened here
   ╰────
  help: Add `)` here.
