crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__parsed_record_reserved.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = { if = 1 }"
---
nash::syntax

  × Reserved word `if` cannot be a field name.
   ╭─[src/Main.nash:1:11]
 1 │ value = { if = 1 }
   ·           ──
   ╰────
  help: Choose another field name.
