crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__parsed_unicode_short.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "crate :: render_plain(& report, & source, \"Main.nash\")"
---
  × Unicode escape needs 4 digits, found 1.
   ╭─[Main.nash:1:11]
 1 │ value = "\u{1}"
   ·           ────
   ╰────
  help: Use four to six hexadecimal digits; adjust leading zeros.
