crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__record_close_indentation.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Record(&Record::IndentEnd(1, 9), 1, 9), \"value = }\")"
---
UNCLOSED DELIMITER
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

Closing `}` is underindented.

Indent `}` to continue this construct.
