crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__record_close_next_line.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Record(&Record::IndentEnd(1, 19), 1, 9),\n\"value = { name = 1\\n}\")"
---
NEED MORE INDENTATION
Region { start: Position { line: 2, column: 1 }, end: Position { line: 2, column: 1 } }

I was partway through parsing a record, but I got stuck here:

I need this curly brace to be indented more. Try adding some spaces before it!

    { name = "Nash"
      , age = 1
      }

Notice that each line starts with some indentation. Usually two or four spaces.
