crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__record_equals.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Record(&Record::Equals(1, 9), 1, 9), \"value = \")"
---
MISSING EQUALS
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

Expected `=` after the field name.

Write `name = value` for a record field.
